Removed hand-written build tasks and use the Badass Runtime Plugin instead