@@ -3,6 +3,7 @@ import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
 plugins {
     id 'java-library'
     id "com.github.johnrengelman.shadow" version "6.0.0"
+    id 'org.beryx.runtime' version '1.11.3'
 }
 
 group 'com.glenfordham'
@@ -18,11 +19,9 @@ sourceSets.main.java.srcDirs = ['src/main/java/']
 sourceSets.main.resources.srcDirs = [ "src/main/resources" ]
 sourceSets.main.resources.includes = [ "**/*.xml", "**/*.xsd" ]
 
+mainClassName = 'com.glenfordham.webserver.Application'
 final OperatingSystem os = DefaultNativePlatform.currentOperatingSystem
 final String sep = File.separator
-final String packagePath = "$buildDir${sep}package${sep}"
-final String buildJrePath = packagePath + "$project.name-$version${sep}"
-final String libsPath = "$buildDir${sep}libs${sep}"
 final String toolsPath = "tools${sep}"
 
 compileJava.dependsOn('buildJavaFromSchema')
@@ -30,11 +29,27 @@ compileJava.dependsOn('buildJavaFromSchema')
 jar {
     manifest {
         attributes(
-                'Main-Class': 'com.glenfordham.webserver.Application',
+                'Main-Class': mainClassName,
                 'Implementation-Title': project.name,
                 // Use 'version' so Shadow Jar gets version properly
                 'Implementation-Version': version,
         )
+    }
+}
+
+runtime {
+    imageDir = file("${buildDir}${sep}automation-server")
+    imageZip = file("${buildDir}${sep}automation-server-${version}.zip")
+    targetPlatform("linux-s390x") {
+        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk14-binaries/releases/download/jdk-14.0.1%2B7.1/OpenJDK14U-jdk_x64_windows_hotspot_14.0.1_7.zip")
+    }
+
+    targetPlatform("win") {
+        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk14-binaries/releases/download/jdk-14.0.1%2B7.1/OpenJDK14U-jdk_x64_windows_hotspot_14.0.1_7.zip")
+    }
+
+    targetPlatform("mac") {
+        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk14-binaries/releases/download/jdk-14.0.1%2B7/OpenJDK14U-jdk_x64_mac_hotspot_14.0.1_7.tar.gz")
     }
 }
 
@@ -77,68 +92,6 @@ task buildJavaFromSchema(type:Exec) {
     } else {
         throw new GradleException("Unable to build with OS: " + os.toString())
     }
-}
-
-// Output all dependency jars to a folder
-task copyToLib(type: Copy) {
-    from configurations.compileClasspath
-    into libsPath
-}
-
-// Analyse project and retrieve modules used
-task getModuleList(dependsOn:["copyToLib","jar"],type:Exec) {
-    workingDir ".${sep}"
-    final runPath = 'jdeps --print-module-deps --multi-release 11 ' + libsPath + '*'
-    if (os.isWindows()) {
-        commandLine 'cmd', '/c', runPath
-    } else if (os.isLinux()) {
-        commandLine runPath
-    } else {
-        throw new GradleException("Unable to build with OS: " + os.toString())
-    }
-
-    standardOutput = new ByteArrayOutputStream()
-    // Allows other tasks to get output of this task
-    ext.out = {
-        // Remove unwanted line breaks
-        return standardOutput.toString().replace("\r\n", "")
-    }
-}
-
-// Build Windows runtime files with jlink
-task buildWinJre(dependsOn:["getModuleList","cleanWinJre"],type:Exec) {
-    doFirst {
-        workingDir ".${sep}"
-        commandLine 'cmd', '/c', 'jlink --add-modules ' + (String) tasks.getModuleList.out() + ' --output ' + buildJrePath
-    }
-}
-
-// Delete existing JRE folder
-task cleanWinJre(type:Delete) {
-    doFirst {
-        try {
-            project.delete buildJrePath
-        } catch (IOException ignore) {}
-    }
-}
-
-// Copy FAT jar to JRE for packaging
-task copyFatJar(dependsOn:"shadowJar",type:Copy) {
-    from file(libsPath + project.name + "-" + version + "-all.jar")
-    into file(buildJrePath)
-}
-
-// Make deploy package TODO: create runtime scripts to remove the need for "java -jar etc"
-task makePackageWindows(dependsOn:["buildWinJre","copyFatJar"]) {
-}
-
-// Zip Windows JRE and fat jar
-task zipPackageWindows(dependsOn:"makePackageWindows",type:Zip) {
-    from buildJrePath
-    include '*'
-    include "*${sep}*" //to include contents of a folder present inside Reports directory
-    archiveName project.name + "-" + version +'-win.zip'
-    destinationDir(file(packagePath))
 }
 
 static def gitCommitNumber() {
